# arbitrage-bot

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  PROFESSIONAL_FEATURES.md  PROFESSIONAL_STRUCTURE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  SETUP.md  UI_GUIDE.md  config.yaml.example  pyproject.toml  requirements.txt  run_sportsbook.py  setup.py
arbitrage_bot/: __init__.py  bot.py  cli.py  exceptions.py  scanner.py
arbitrage_bot/api/: __init__.py  fanduel_client.py  kalshi_client.py  odds_api_client.py  polymarket_client.py
arbitrage_bot/core/: __init__.py  arb_engine.py  budget_tracker.py  opportunity_tracker.py
arbitrage_bot/models/: __init__.py  market.py  opportunity.py  order.py  position.py  trade.py
arbitrage_bot/ui/: __init__.py  fastapi_dashboard.py  templates.py  terminal.py
arbitrage_bot/utils/: __init__.py  config.py  logger.py  validators.py
tests/: __init__.py  conftest.py  test_models.py  test_validators.py
